# star-routes

./: README.md  output  star-routes.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
opgave/: opgave.md
routes/: galaxy.star  hazards.star  nebula.star
routes/test/: empty.star  planet.star
routes/test/hazard/: invalid1.star  invalid2.star  invalid3.star  valid.star
routes/test/mission/: invalid1.star  invalid2.star  invalid3.star  valid.star
routes/test/route/: invalid1.star  invalid2.star  invalid3.star  valid_double.star  valid_left.star  valid_right.star
src/: GameConstants.hs  GameData.hs  GameDataConstants.hs  GameInputHandler.hs  GameLogic.hs  GameMath.hs  GameParser.hs  GameRender.hs  GameRunner.hs
test/: ConstantsTest.hs  LogicTest.hs  MathTest.hs  ParserTest.hs  RunTests.hs  TestHelpFunctions.hs
verslag/: verslag.typ
